src/test/ui/reachable/expr_return.stderr
error: unreachable expression
  --> $DIR/expr_return.rs:21:22
   |
21 |     let x = {return {return {return;}}}; //~ ERROR unreachable
   |                      ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_return.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

